// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order should render an order card 1`] = `
<CustomCard
  color="#fff"
>
  <CardSection
    alignItems="flex-start"
    justifyContent="space-between"
  >
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderNumber"
            values={Object {}}
          />
        </label>
        <div>
          #123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderDate"
            values={Object {}}
          />
        </label>
        <div>
          date
        </div>
      </div>
      <div>
        <label>
          <FormattedMessage
            id="orderCycle"
            values={Object {}}
          />
        </label>
        <div>
          cycle
        </div>
      </div>
      <div>
        <label>
          <FormattedMessage
            id="orderEstimatedDeliveryDate"
            values={Object {}}
          />
        </label>
        <div>
          estimatedDeliveryDate
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="flex-start"
    justifyContent="space-between"
  >
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderValue"
            values={Object {}}
          />
        </label>
        <div>
          R$ 123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderTotalScore"
            values={Object {}}
          />
        </label>
        <div>
          100
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="center"
    justifyContent="center"
  >
    <styled.div>
      <CardText
        color="#fff"
      >
        status
      </CardText>
    </styled.div>
    <FormButton
      backgroundColor="#fff"
      disabled={false}
      flat={false}
      label={
        <FormattedMessage
          id="orderDetails"
          values={Object {}}
        />
      }
      labelColor="#000"
      link="link"
      primary={false}
    />
  </CardSection>
</CustomCard>
`;

exports[`Order should render an order card without status 1`] = `
<CustomCard
  color="#fff"
>
  <CardSection
    alignItems="flex-start"
    justifyContent="space-between"
  >
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderNumber"
            values={Object {}}
          />
        </label>
        <div>
          #123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderDate"
            values={Object {}}
          />
        </label>
        <div>
          date
        </div>
      </div>
      <div>
        <label>
          <FormattedMessage
            id="orderCycle"
            values={Object {}}
          />
        </label>
        <div>
          cycle
        </div>
      </div>
      <div>
        <label>
          <FormattedMessage
            id="orderEstimatedDeliveryDate"
            values={Object {}}
          />
        </label>
        <div>
          estimatedDeliveryDate
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="flex-start"
    justifyContent="space-between"
  >
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderValue"
            values={Object {}}
          />
        </label>
        <div>
          R$ 123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <label>
          <FormattedMessage
            id="orderTotalScore"
            values={Object {}}
          />
        </label>
        <div>
          100
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="center"
    justifyContent="center"
  >
    <FormButton
      backgroundColor="#fff"
      disabled={false}
      flat={false}
      label={
        <FormattedMessage
          id="orderDetails"
          values={Object {}}
        />
      }
      labelColor="#000"
      link="link"
      primary={false}
    />
  </CardSection>
</CustomCard>
`;
